tests/golden/err-on-attr/expected_error.txt
error: `on-*` 属性 `on-click` は html ターゲットでは使えません
 --> main.clum:2:25
  |
2 | index: Html = h .button on-click 'handle'
  |                         ^^^^^^^^ イベントは js ターゲットの責務です
